--- a/website/velocity.html
+++ b/website/velocity.html
@@ -26,7 +26,7 @@
   </head>
   <body class="u-body u-xl-mode"><header class="u-clearfix u-header u-header" id="sec-200b"><div class="u-clearfix u-sheet u-sheet-1">
         <h3 class="u-headline u-text u-text-default u-text-1">
-          <a href="/">Warehouse Inventory System(WIS)</a>
+          Warehouse Inventory System(WIS)
         </h3>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-0fb2">
